tags/2013-08-29_cppreference/Archive/64032ad04a5a602b9ee5f474b9e18236-a6f51d7ab5b7d6d1caaf9c009ef45053/output
+ g++ -std=c++1y -O0 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:8:10: error: use of deleted function ‘void f(double)’
     f(1.0);
          ^
main.cpp:4:6: error: declared here
 void f(double t) = delete;
      ^
